[TASK] Reorganize structure without web folder to match test server

--- a/provisioning/files/apache/virtualhost.conf
+++ b/provisioning/files/apache/virtualhost.conf
@@ -7,12 +7,12 @@
         php_value display_errors On
 
 
-        DocumentRoot {{project_dir}}/web
+        DocumentRoot {{project_dir}}
 
 
         DirectoryIndex index.php
 
-        <Directory {{project_dir}}/web>
+        <Directory {{project_dir}}>
                 Options Indexes FollowSymLinks MultiViews
                 AllowOverride All
                 Order allow,deny
